FIxed model not resetting last epoch score; Epoch count now increases always, instead of only on network improvement; Fixed class Info save working on 'append' mode. set to 'writing' now; Fixed Model metrics are being saved only on improvement. Save occurs always now.

--- a/CancroEuropeu/.gitignore
+++ b/CancroEuropeu/.gitignore
@@ -2,11 +2,11 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 
 # Distribution / packaging
+.idea
 .Python
 build/
 develop-eggs/
@@ -131,6 +131,10 @@ dmypy.json
 # Neural network folders
 temp
 output
-
+runs.ps1
+antidesligamento.bat
+dados.csv
+events_eraser.bat
+LICENSE
 # Neural network models
 *.pth
